fixed animation on mobile app dev page

--- a/components/services/MobileAppDevelopment/Styles.css
+++ b/components/services/MobileAppDevelopment/Styles.css
@@ -342,19 +342,25 @@
   top: 0;
   left: 100%;
   animation: slideInOut 16s infinite;
+  opacity: 0;
 }
 
 .mockup-slider img:nth-child(1) {
   animation-delay: 0s;
+  opacity: 1;
 }
+
 .mockup-slider img:nth-child(2) {
   animation-delay: 4s;
+  opacity: 1;
 }
 .mockup-slider img:nth-child(3) {
   animation-delay: 8s;
+  opacity: 1;
 }
 .mockup-slider img:nth-child(4) {
   animation-delay: 12s;
+  opacity: 1;
 }
 
 @keyframes slideInOut {
